<resources>
    <string name="app_name">FeelsLike</string>
    <string name="title_activity_app">FeelsLike</string>
    
<!--    Buttons-->
    <string name="button_back">Back</string>
    <string name="button_calculate">Calculate</string>
    <string name="button_continue">Continue</string>
    <string name="button_edit_info">Edit Info…</string>
    <string name="button_email_results">E-mail Results</string>
    <string name="button_favorites_name">Favorite Address</string>
    <string name="button_favorites_address">123 Yellow Brick Road</string>
    <string name="button_skip">Skip</string>
    <string name="button_set_destination">Set Destination</string>

<!--    TextViews-->
    <string name="text_barometric">Barometric pressure:</string>
    <string name="text_centimeters">Centimeters:</string>
    <string name="text_complex_calculations">Complex Calculations</string>
    <string name="text_continue_with_email">Continue with E-mail</string>
    <string name="text_continue_with_google">Continue with Google</string>
    <string name="text_current_location">Current Location</string>
    <string name="text_date">Date:</string>
    <string name="text_email">E-mail:</string>
    <string name="text_email_results">Email Results</string>
    <string name="text_enter_address">Destination name or address</string>
    <string name="text_favorites">Favorites</string>
    <string name="text_feet">Feet:</string>
    <string name="text_first_name">First Name:</string>
    <string name="text_height">Height</string>
    <string name="text_hint_search">Search by City</string>
    <string name="text_humidity">Humidity:</string>
    <string name="text_imperial">Imperial (US)</string>
    <string name="text_inches">Inches:</string>
    <string name="text_last_name">Last Name:</string>
    <string name="text_main_page">Main Page</string>
    <string name="text_menu">Menu</string>
    <string name="text_metric">Metric (Eu)</string>
    <string name="text_name_favorite">Give this spot a name!</string>
    <string name="text_planned_location">Planned Location</string>
    <string name="text_preferences">Preferences</string>
    <string name="text_results">Results</string>
    <string name="text_save">Save to Favorites</string>
    <string name="text_show_more">Show more…</string>
    <string name="text_temp">Temperature:</string>
    <string name="text_weight_pounds">Weight (in pounds):</string>
    <string name="text_weight_kilograms">Weight (in kilograms):</string>

<!--    Content Descriptions-->
    <string name="description_background_photo">Snowy mountain before clouds photo at sunset</string>
    <string name="description_bookmark_image">Bookmark image</string>
    <string name="description_button_back">Back button</string>
    <string name="description_button_calculate">Calculate button</string>
    <string name="description_button_continue">Continue button</string>
    <string name="description_button_edit_info">Edit Information button</string>
    <string name="description_button_email_results">E-mail Results button</string>
    <string name="description_button_menu">Menu button</string>
    <string name="description_button_skip">Skip button</string>
    <string name="navigation_drawer_close">Close menu drawer</string>
    <string name="navigation_drawer_open">Open menu drawer</string>
    <string name="description_button_favorites">Click here for this favorite place to be displayed on a map</string>
    <string name="description_image_favorites">Favorite place photo</string>
    <string name="description_profile_picture">Profile picture set in a circle</string>
    <string name="description_logo_feelslike">FeelsLike app logo</string>

<!--    Map Pin-->
    <string name="calculate_here">Calculate Here!</string>
    <string name="search">Search</string>
    <string name="description_search_icon">Search icon</string>
    <string name="empty">"There is nothing here"</string>
    <string name="button_text_results">Text Results</string>
    <string name="button_search_again">Search Again</string>
    <string name="button_text_share_results">Share Results</string>
    <string name="text_send_to">Send to:</string>
    <string name="text_results_feelslike">FeelsLike:</string>

<!--    Chosen weather unit of measurement-->
    <string name="unit_imperial">imperial</string>
    <string name="unit_metric">metric</string>

    <!--        Arrays-->
    <string-array name="menu_array">
        <item>Main Page</item>
        <item>Preferences</item>
        <item>Favorites</item>
        <item>Profile</item>
        <item>App Settings</item>
    </string-array>
</resources>