<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/widget_location_calculate_buttons">
    
    <data>
        <variable
            name="selectedPlace"
            type="com.emilycodes.feelslike.model.entity.CalculationsEntity" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dots_bridge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_location_bridge"
            android:visibility="gone"/>

        <Button
            android:id="@+id/button_calculate"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_padding_small"
            android:background="@drawable/button_standard"
            android:contentDescription="@string/description_button_calculate"
            android:text="@string/button_calculate"
            android:textAppearance="@style/errorHeaderMainButtonStyleText"
            app:backgroundTint="@color/light_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

<!--        Nice-To-Have feature for the future-->
        <CheckBox
            android:id="@+id/checkbox_complex_calculations"
            style="@style/fontStyleNormal"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/check_box_height"
            android:buttonTint="@color/dark_grey"
            android:text="@string/text_complex_calculations"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/button_calculate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_current_location"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_margin"
            android:text="@string/text_current_location"
            android:textAppearance="@style/smallButtonText"
            android:textColor="@color/black"
            app:background="@drawable/button_location_rectangle"
            app:backgroundTint="@color/light_grey"
            app:layout_constraintBottom_toTopOf="@+id/checkbox_complex_calculations"
            app:layout_constraintEnd_toStartOf="@+id/dots_bridge"
            app:layout_constraintTop_toBottomOf="@+id/dots_bridge"
            android:visibility="gone"/>

        <Button
            android:id="@+id/button_planned_location"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_margin"
            android:text="@string/text_planned_location"
            android:textAppearance="@style/smallButtonText"
            android:textColor="@color/black"
            app:background="@drawable/button_location_rectangle"
            app:backgroundTint="@color/light_grey"
            app:layout_constraintBottom_toTopOf="@+id/checkbox_complex_calculations"
            app:layout_constraintStart_toEndOf="@+id/dots_bridge"
            app:layout_constraintTop_toBottomOf="@+id/dots_bridge"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>