<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/widget_layout_planned_location_form">

<!--    TODO: Get the "X" icon from James-->
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/button_back"
        app:srcCompat="@drawable/icon_menu_button"/>

    <EditText
        android:id="@+id/editTextTextPostalAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:labelFor="@id/editTextTextPostalAddress"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planned_location_text_view" />

    <TextView
        android:id="@+id/planned_location_text_view"
        style="@style/mainItemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_planned_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:background="@drawable/button_standard"
        app:backgroundTint="@color/light_grey"
        android:textAppearance="@style/normalButtonText"
        android:textColor="@color/black"
        android:text="@string/button_set_destination"/>
</androidx.constraintlayout.widget.ConstraintLayout>