<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="favoritePlace"
            type="com.example.feelslike.utilities.FeelsLikeRepository" />

        <variable
            name="clickListener"
            type="com.example.feelslike.utilities.FavoritesClickListener" />
    </data>

<!--    android:onClick="@{clickListener}"-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/list_item_favorites_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/list_item_favorites_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/favorites_card_view_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_standard"
                app:cardCornerRadius="@dimen/button_corners"
                app:cardElevation="@dimen/spacing_none"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/image_placeholder_favorites"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/favorites_list_item_height"
                    android:background="@drawable/button_standard"
                    android:contentDescription="@string/description_image_favorites"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/image_placeholder" />

            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/favorites_list_item_button_start_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.35" />

            <Button
                android:id="@+id/button_favorites_place"
                style="@style/Theme.FeelsLike"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/button_standard"
                android:contentDescription="@string/description_button_favorites"
                android:drawableEnd="@drawable/icon_full_heart"
                android:fontFamily="@font/font_family"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                app:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/favorites_list_item_button_start_guideline" />

            <TextView
                android:id="@+id/favorites_place_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/menu_text_margin_padding"
                android:elevation="@dimen/button_text_foreground_elevation"
                android:textAppearance="@style/menuHeaderText"
                android:onClick="@{() -> clickListener.onClick(favoritePlace)}"
                app:layout_constraintStart_toStartOf="@id/button_favorites_place"
                app:layout_constraintTop_toTopOf="@id/button_favorites_place"
                tools:text="@string/button_favorites_name" />

            <TextView
                android:id="@+id/favorites_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/menu_text_margin_padding"
                android:layout_marginBottom="@dimen/menu_text_margin_padding"
                android:elevation="@dimen/button_text_foreground_elevation"
                android:textAppearance="@style/smallButtonText"
                app:layout_constraintBottom_toBottomOf="@id/button_favorites_place"
                app:layout_constraintStart_toStartOf="@id/button_favorites_place"
                app:layout_constraintTop_toBottomOf="@id/favorites_place_name"
                tools:text="@string/button_favorites_address" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>